force-app/main/default/objects/Music_Store_Stock_Task__c/fields/Music_Product__c.field-meta.xml
<CustomField>
    <fullName>Music_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Music Product</label>
    <referenceTo>Music_Product__c</referenceTo>
    <relationshipLabel>Music Store Stock Tasks</relationshipLabel>
    <relationshipName>Music_Store_Stock_Tasks</relationshipName>
    <type>Lookup</type>
</CustomField>