force-app/main/default/objects/Music_Store_Stock_Task__c/fields/Number_of_Products_to_stock_in_Back__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Products_to_stock_in_Back__c</fullName>
    <label>Number of Products to stock in Back</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>