force-app/main/default/objects/Music_Store_Stock_Task__c/fields/Number_of_Products_to_stock_on_Floor__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Products_to_stock_on_Floor__c</fullName>
    <label>Number of Products to stock on Floor</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>